--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+
+
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://112.187.189.12:3307/fit_mate_backend
+spring.datasource.username=chanhale
+spring.datasource.password=Wonchan1788@
