--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-	// ChatGPT 추가
-	implementation 'io.github.flashvayne:chatgpt-spring-boot-starter:1.0.4'
+	//json parser 추가
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 tasks.named('test') {
